# ds3-checklist

./: README.md  crowdin.yml  flake.nix  workspace.toml
.github/workflows/: build-apk.yml  build-appbundle.yml  nix-build-apk.yml  release.yml
ds3_cheatsheet_parser/: Cargo.toml  build.rs  build.rsd
ds3_cheatsheet_parser/database/: achievements-new.json  armor.json  playthrough.json  shields.json  trades.json  weapons.json
ds3_cheatsheet_parser/htmls/: achievements_except_rings.html  achievements_only_rings.html  armor_fragment.html  playthrough.html  shields.html  trades_fragment.html  weapons.html
ds3_cheatsheet_parser/src/: achievements.rs  armor.rs  lib.rs  main.rs  playthrough.rs  souls.rs  trades.rs  utils.rs  weapons_and_shields.rs
ds3_cheatsheet_parser/src/achievements/: mod.rs
ds3_cheatsheet_parser/src/old/: soul_types.rs
ds3_cheatsheet_parser/src/old/achievements/: mod.rs  types.rs
ds3_cheatsheet_parser/src/old/armor/: mod.rs  types.rs
ds3_cheatsheet_parser/src/old/playthrough/: mod.rs  playthrough_types.rs
ds3_cheatsheet_parser/src/old/playthrough/trades/: mod.rs
ds3_cheatsheet_parser/src/old/weapons_shields/: mod.rs  types.rs
ds3_cheatsheet_parser/src/playthrough/: mod.rs
ds3_checklist/: README.md  l10n.yaml  playthrough.sksl.json  pubspec.yaml
ds3_checklist/android/: build.gradle  keystore.properties
ds3_checklist/assets/: flatbuffers  playthrough.fb
ds3_checklist/lib/: AllPageFutureBuilder.dart  CacheManager.dart  DatabaseManager.dart  (+4 more)
json_to_sqlite/: Cargo.toml
json_to_sqlite/jsons/: achievements.json  armor.json  playthrough.json  trades.json
json_to_sqlite/sqlites/: achievements.sqlite  trades.sqlite  weapons_and_shields
json_to_sqlite/src/: main.rs
schema/: achievements.fbs  armor.fbs  gen.sh  playthrough.fbs  soul_prices.fbs  souls.fbs  trades.fbs  weapons_and_shields.fbs
simple_rich_md/: LICENSE  README.md  pubspec.yaml
(+87 files in other folders)
