[package]
name = "ds3_cheatsheet_parser"
version = "0.1.0"
authors = ["Danil Kondratiev <knightpp@protonmail.com>"]
edition = "2018"

build = "build.rs"
[dependencies]
serde = { version = "1.0", features = ["derive", "default"] }
serde_json = "1.0"
git2 = "0.13"
anyhow = "1.0"
select = "0.6.0-alpha.1"
url = { version = "2.2.0", features = ["serde"] }
flatbuffers = "0.7" # 0.8 gives error
tracing = "0.1"
tracing-subscriber = "0.2"
regex = "1.4"

[build-dependencies]
flatc-rust = "0.1"
