[package]
name = "json_to_sqlite"
version = "0.1.0"
authors = ["Danil Kondratiev <knightpp@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23"
serde = "1.0"
serde_json = "1.0"

ds3_checklist_parser = { path = "../ds3_checklist_parser" }