[package]
name = "json_to_sqlite"
version = "0.1.2"
authors = ["Danil Kondratiev <knightpp@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29"
serde = "1.0"
serde_json = "1.0"

ds3_cheatsheet_parser = { path = "../ds3_cheatsheet_parser" }
